--- a/book.html
+++ b/book.html
@@ -55,7 +55,7 @@
           <video
   src="video.mp4"
   style="width: 100%; max-width: 600px; height: auto;"
-  controls autoplay loop
+  controls loop
 ></video>
         </div>
       </div>
