--- a/book.html
+++ b/book.html
@@ -34,7 +34,7 @@
           <video
   src="video1.mp4"
   style="width: 100%; max-width: 600px; height: auto;"
-  controls autoplay loop
+  controls autoplay
 ></video>
 
           <p>
